# legal-ease

./: .gitignore  README.md  deleteImages.sh  docker-compose.yml  embeddings.json  shutdown.sh
.github/workflows/: docker-image.yml
backend/: Dockerfile  index.js  main.py  package.json  pyproject.toml  requirements.txt  start_chroma.py
backend/model/: README.md  pyproject.toml  start_chroma.py
backend/model/citation_embed/: embed.py  readme.md  rta_citation.docx  rta_embed.docx
backend/model/citation_embed/rta/: rta_p.docx
backend/model/db_store/: chroma.sqlite3
backend/model/embeddings/: Exemptions_And_Introduction_embeddings.json  Responsibilities_Of_A_Landlord_embeddings.json  Tenancy_Agreement_embeddings.json
backend/model/qa_chain/: query_answer.py
backend/model/qa_chain/semantic_router/: route.py
backend/model/qa_chain/test/: get_citation_id.py  get_from_id.py  test_qa.py  test_retrieval.py
citation_embed/: embed.py
citation_embed/rta/: rta.docx
frontend/react-docker/: Dockerfile  package-lock.json  package.json
frontend/react-docker/public/: index.html
mlAgent/: pyproject.toml
mlAgent/citation_embed/: embed.py
model/: README.md  pyproject.toml  start_chroma.py
model/citation_embed/: chunked_text_output.txt  embed.py  rta_citation.docx  rta_embed.docx  rta_penis_wording_mod.docx
model/embeddings/: Exemptions_And_Introduction_embeddings.json  Responsibilities_Of_A_Landlord_embeddings.json
model/qa_chain/: query_answer.py
model/qa_chain/semantic_router/: route.py
model/qa_chain/test/: test_retrieval.py
(+13 files in other folders)
